[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/launcher/launcher.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://addons/launcher/Cancel-Button-PNG-Free-Download.png" type="Texture" id=3]
[ext_resource path="res://addons/launcher/BarWindowPanel.gd" type="Script" id=4]
[ext_resource path="res://addons/launcher/Mods.tscn" type="PackedScene" id=5]
[ext_resource path="res://2D/qiyan/Sliced Images/Select/select_input.png" type="Texture" id=6]

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 6 )
region_rect = Rect2( 18, 18, 798, 110 )
margin_right = 5.0
margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Launcher" type="Node"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WindowDialog" type="Panel" parent="CanvasLayer/HUD"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BarWindowPanel" type="Panel" parent="CanvasLayer/HUD/WindowDialog"]
anchor_right = 1.0
anchor_bottom = 0.108333
custom_styles/panel = SubResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ExitButton" type="Button" parent="CanvasLayer/HUD/WindowDialog/BarWindowPanel"]
self_modulate = Color( 0, 0.486275, 1, 1 )
anchor_left = 0.960938
anchor_top = 0.2
anchor_right = 0.992188
anchor_bottom = 0.8
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HUD/WindowDialog"]
anchor_left = 0.0078125
anchor_top = 0.92
anchor_right = 0.375
anchor_bottom = 0.973333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="CanvasLayer/HUD/WindowDialog/VBoxContainer"]
margin_right = 705.0
margin_bottom = 25.0
text = "$$Launcher_version"

[node name="Label2" type="Label" parent="CanvasLayer/HUD/WindowDialog/VBoxContainer"]
margin_top = 33.0
margin_right = 705.0
margin_bottom = 58.0
text = "$$Game_version"

[node name="TabContainer" type="TabContainer" parent="CanvasLayer/HUD/WindowDialog"]
anchor_top = 0.0666667
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Game" type="Control" parent="CanvasLayer/HUD/WindowDialog/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 61.0
margin_right = -8.0
margin_bottom = -8.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game"]
modulate = Color( 1, 1, 1, 0.52549 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LogoTextureRect" type="TextureRect" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game"]
anchor_left = 0.619048
anchor_top = 0.152749
anchor_right = 0.947421
anchor_bottom = 0.674134
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayButton" type="Button" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game"]
anchor_left = 0.650794
anchor_top = 0.674134
anchor_right = 0.895632
anchor_bottom = 0.810977
text = "Play"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game"]
anchor_left = 0.0555556
anchor_top = 0.10387
anchor_right = 0.468254
anchor_bottom = 0.818737
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game/ScrollContainer"]
margin_right = 785.778
margin_bottom = 671.26
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/HUD/WindowDialog/TabContainer/Game/ScrollContainer/PanelContainer"]
margin_left = 14.0
margin_top = 14.0
margin_right = 771.778
margin_bottom = 657.26
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "Hello [wave] world [/wave] !"
text = "Hello  world  !"

[node name="Settings" type="Control" parent="CanvasLayer/HUD/WindowDialog/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Mods" parent="CanvasLayer/HUD/WindowDialog/TabContainer" instance=ExtResource( 5 )]
visible = false

[node name="HTTPRequest" type="HTTPRequest" parent="."]
use_threads = true

[connection signal="gui_input" from="CanvasLayer/HUD/WindowDialog/BarWindowPanel" to="CanvasLayer/HUD/WindowDialog/BarWindowPanel" method="_on_BarWindowPanel_gui_input"]
[connection signal="pressed" from="CanvasLayer/HUD/WindowDialog/BarWindowPanel/ExitButton" to="CanvasLayer/HUD/WindowDialog/BarWindowPanel" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/HUD/WindowDialog/TabContainer/Game/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
